<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.comtel2000</groupId>
	<artifactId>jogl-skia</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>16</maven.compiler.source>
		<maven.compiler.target>16</maven.compiler.target>
		<javafx.version>17-ea+11</javafx.version>

		<skija.version>0.92.11</skija.version>
		<skija.platform>windows</skija.platform>

		<jogl.version>v2.4.0-rc-20210111</jogl.version>
		<jogl.platform>windows-amd64</jogl.platform>
		<javafx16sdk>C:\\Java\\openjfx\\javafx-sdk-16\\lib</javafx16sdk>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.jetbrains.skija</groupId>
			<artifactId>skija-shared</artifactId>
			<version>${skija.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.skija</groupId>
			<artifactId>skija-${skija.platform}</artifactId>
			<version>${skija.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.30</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all</artifactId>
			<version>${jogl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all-natives-${jogl.platform}</artifactId>
			<version>${jogl.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt</artifactId>
			<version>${jogl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-natives-${jogl.platform}</artifactId>
			<version>${jogl.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>org.comtel2000.jogl.sample.Demo</mainClass>
					<arguments>
						<argument>--module-path ${javafx16sdk}</argument>
						<argument>--add-modules javafx.controls</argument>
						<argument>--add-opens javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</argument>
						<argument>--add-opens javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED</argument>
						<argument>--add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</argument>
						<argument>--add-opens javafx.graphics/javafx.stage=ALL-UNNAMED</argument>
						<argument>-Djogamp.debug.JNILibLoader=true</argument>
						<argument>-Djogamp.debug.NativeLibrary=true</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>space-maven</id>
			<url>https://packages.jetbrains.team/maven/p/skija/maven</url>
		</repository>
		<repository>
			<id>jzy3d-snapshots</id>
			<name>Jzy3d Snapshots</name>
			<url>http://maven.jzy3d.org/snapshots/</url>
		</repository>
		<repository>
			<id>jzy3d-releases</id>
			<name>Jzy3d Releases</name>
			<url>http://maven.jzy3d.org/releases/</url>
		</repository>
	</repositories>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
</project>